Fix mobile layout alignment for author profile section
Use flexbox instead of table-cell display for .author__urls-wrapper
to properly align social media icons with avatar and text on mobile.

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -147,11 +147,10 @@
 
 .author__urls-wrapper {
   position: relative;
-  display: table-cell;
-  vertical-align: middle;
+  display: flex;
+  align-items: center;
   font-family: $sans-serif;
   z-index: 10;
-  position: relative;
   margin-left: auto;
   cursor: pointer;
 
